<resources>
    <string name="app_name">Elevate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_choices">Record Workout</string>
    <string name="Running">Running</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Finish">Finish</string>
    <string name="zero_calories">0</string>
    <string name="example_distance">1.03 mi</string>
    <string name="example_steps">2000</string>
    <string name="example_calories">300</string>
    <string name="distance_caption">Distance Travelled</string>
    <string name="step_caption">Steps</string>
    <string name="calories_caption">Calories Burned</string>
    <string name="zero_distance">0.00 mi</string>
    <string name="zero_steps">0</string>

</resources>